--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
     padding: 0;
     box-sizing: border-box;      
 }
-.body{
+body{
     font-family: "Patrick Hand", cursive;
-    background-color: bisque;
+    background: url('images/background.jpg');
+    background-size: cover;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
